# tangle-cnn-prod

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  blockface_to_multichannel.py  gke_wildcat_analyze_wsi_template.yaml  job.yaml  levels.py  nissl_to_multichannel.py  osl_worker.py  process_blockface.sh  process_blockface_block.sh  process_nissl.sh  process_slide_full.sh  pyproject.toml  requirements.txt  scan_tangles.py  test.yaml  test_job.yaml  train_ex.yaml  train_full.sh  unet_wildcat.py  unet_wildcat_gmm.py  wildcat_analyze_wsi.sh  wildcat_main.py
.github/workflows/: python-publish.yml
scripts/: process_blockface.sh  process_blockface_block.sh
tangle_cnn/: __main__.py  blockface_to_multichannel.py  nissl_to_multichannel.py  osl_worker.py  unet_wildcat.py  unet_wildcat_gmm.py  wildcat_main.py
